# qector-decoder

./: .gitattributes  .gitignore  .zenodo.json  BENCHMARK_GPU.md  CHANGELOG.md  CITATION.cff  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DISCOVERY.md  Dockerfile  INSTALL.md  LICENSE  OIDC_SETUP.md  PYPI_README.md  README.md  RELEASE_NOTES.md  REPO_TOPICS.md  SECURITY.md  build.rs  codemeta.json  llms.txt  pyproject.toml  seo_keywords.md
.github/workflows/: CI.yml  tests.yml
benchmark_results/: belief_extended.json  belief_grid.json  belief_latency.json  belief_latency.md  competitive_belief.json  competitive_belief.md  competitive_latency_full.csv  competitive_latency_full.json  competitive_stim_ler.json  competitive_stim_ler.md  competitive_stim_ler_full.json  competitive_stim_ler_full.md  d13_mismatch_audit_summary.json  d15_mismatch_audit_memz_summary.json  d15_mismatch_audit_summary.json  gpu_extensive.json  gpu_extensive_full.json  ler_summary.md  min_competitive.csv  min_competitive.json  min_competitive_belief.json  min_competitive_belief.md  min_competitive_stim_ler.json  min_competitive_stim_ler.md  min_threshold_fast.json  native_memory.json  results_v053_retest.json  results_v053_run1.json  stim_ler_d13_d15.json  stim_ler_d13_d15.md  stim_ler_memz.json  stim_ler_memz.md  validation_v051.json  validation_v052.json  validation_v052_retest.json  vram_profile.json  wb_artifact_v052.csv  wb_artifact_v052.json  weight_gap_analysis.json
docs/: API_STABILITY.md  API_SURFACES.md  BENCHMARK_COMPETITIVE.md  BEYOND_PYMATCHING.md  CORRECTNESS_AUDIT.md  METHODOLOGY.md  PLATFORM_ARTIFACT_ROADMAP.md  REPRODUCE.md  REPRODUCIBILITY_CHECKLIST.md  SCALING.md  SECURITY_DEPLOYMENT.md  SERVICE_API_SCHEMA.md  todo.md
docs/reports/: RAPPORT_V3_2_GNN_TRAINING.md  REPORT_DECODER_CORRECTNESS_v3.6.md
examples/: example_advanced_decoders.py  example_basic.py  example_batch.py  example_blossom.py  example_codes_and_diagnostics.py  example_pymatching_and_backend.py  example_stim_dem.py  example_streaming.py
lib/: OpenCL.def
proto/: qector.proto
python/qector_decoder_v3/: __init__.py  _bp_core.py  advanced.py  backend.py  belief_matching.py  benchmarking.py  bposd.py  codes.py  dem.py  predecoder.py  py.typed  pymatching_compat.py  qiskit_plugin.py  rest_api.py  result.py  sinter_compat.py  stim_compat.py  workbench.py
python/tests/: test_advanced_decoders.py  test_auto_decoder_calibrate.py  test_backend.py  test_batch_shapes.py  test_batch_vs_single_decode.py  test_belief_bp_convergence.py  test_belief_latency_cost.py  test_belief_matching.py  test_belief_memory_z.py  test_belief_p_sweep.py  test_belief_reference_package.py  test_belief_seed_p_grid.py  test_belief_seed_sweep.py  test_beliefmatching_bridge.py  test_benchmark.py  test_benchmark_syndrome_faithful_gate.py  test_benchmarking.py  test_beyond_pymatching_examples.py  test_blossom_adaptive_k_regression.py  test_blossom_candidate_set_contains_optimal.py  test_blossom_d15_no_gap.py  test_blossom_extra.py  test_blossom_weight_optimality.py  test_bposd_bb144.py  test_bposd_bb72.py  test_bposd_bicycle_family.py  test_bposd_bp_modes.py  test_bposd_hypergraph_product.py  test_bposd_ldpc.py  test_bposd_osd_orders.py  test_bposd_rowspace_metric.py  test_bposd_vs_ldpc_runtime.py  test_brute_force_small.py  test_bulletproof.py  test_clean_venv_install.py  test_codes.py  test_cold_path_present.py  test_competitive_ler.py  test_correctness_audit_commands.py  test_cpu_no_cuda_required.py  (+87 more)
qector_evidence_bundle/: belief_extended.json  belief_grid.json  competitive_stim_ler.json  competitive_stim_ler.md  correctness_audit.json  d15_mismatch_audit.csv  d15_mismatch_audit_summary.json  environment.json  git_commit.txt  manifest.json  native_memory.json  pip_freeze.txt  sha256sums.txt  stim_ler_d13_d15.json  stim_ler_d13_d15.md  stim_ler_memz.json  stim_ler_memz.md  weight_gap_analysis.json
scripts/: _bench_large_d.py  auto_backend_calibrate.py  belief_extended.py  belief_grid.py  belief_reference_compare.py  benchmark_bp_marginal.py  benchmark_gnn.py  benchmark_gpu.py  benchmark_gpu_end2end.py  benchmark_heuristic.py  benchmark_heuristic_sparse.py  benchmark_ler.py  benchmark_ler_gpu.py  benchmark_ler_legacy.py  benchmark_ler_reporting.py  benchmark_ler_serious.py  benchmark_ler_surface.py  benchmark_neural_hybrid.py  benchmark_proper_toric.py  benchmark_vs_pymatching.py  build_cp314.bat  competitive_belief_matching.py  competitive_stim_ler.py  d15_mismatch_audit.py  finalize_bundle.py  generate_report_pdf.py  gpu_extensive_test.py  gpu_memory_profile.py  leak_test.py  native_memory_profile.py  run_benchmark.py  run_competitive_benchmark.py  run_due_diligence_bundle.py  run_due_diligence_wrapper.py  run_scaling_benchmark.py  test_full_backprop.py  test_methods.py  test_sparse_methods.py  threshold_estimate.py  train_and_benchmark_large.py  (+6 more)
src/: lib.rs
