[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "qector-decoder-v3"
version = "0.5.0"
description = "Source-available Rust/Python QEC R&D platform: PyMatching-compatible validation, belief-matching, BP-OSD (LDPC/qLDPC), CPU/GPU batch decoding, and artifact-hashed benchmark evidence"
readme = {file = "PYPI_README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Guillaume Lessard / iD01t Productions", email = "admin@qector.store"}
]
keywords = ["quantum", "error correction", "decoder", "union-find", "QEC", "rust", "MWPM", "Stim", "PyMatching", "LDPC", "qLDPC"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]
# Stim ecosystem: DEM loading, syndrome sampling, Sinter harness, and
# PyMatching / belief-matching / BP-OSD cross-checks.
stim = [
    "stim>=1.12",
    "pymatching>=2.0",
    "sinter>=1.12",
    "ldpc>=2.0",
    "beliefmatching>=0.2",
]
# Reproducible benchmark harness: memory probing, plots and tables.
bench = [
    "psutil>=5.9",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "scipy>=1.10",
]
# GPU acceleration is enabled at build time via Cargo features. These extras exist so
# `pip install qector-decoder-v3[cuda]` / `[opencl]` resolve cleanly. See INSTALL.md.
cuda = []
opencl = []
all = [
    "stim>=1.12",
    "pymatching>=2.0",
    "sinter>=1.12",
    "ldpc>=2.0",
    "beliefmatching>=0.2",
    "psutil>=5.9",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://www.qector.store"
Repository = "https://github.com/GuillaumeLessard/qector-decoder.git"
Issues = "https://github.com/GuillaumeLessard/qector-decoder/issues"
Documentation = "https://github.com/GuillaumeLessard/qector-decoder#readme"
"Commercial licensing" = "https://www.qector.store"

[tool.maturin]
python-source = "python"
module-name = "qector_decoder_v3.qector_decoder_v3"
manifest-path = "Cargo.toml"
# Exclude all Rust source from sdist / wheel metadata -- compiled .so/.pyd only.
# The src/ in this repo contains only a stub compile_error! placeholder.
# The real source is injected at CI build time via encrypted Actions secrets.
exclude = [
  "src/**",
  "tests/**",
  "actions-runner/**",
  "artifacts/**",
  "target/**",
  ".venv/**",
]
# Strip debug symbols from compiled extension
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Starlette's TestClient warns that httpx is deprecated in favor of httpx2;
    # this is upstream noise, not actionable from this project.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# E702: semicolons used intentionally for chained one-liners in plotting helpers.
# E731: lambda assignments used for compact callback tables in a few helpers.
# E741: single-letter variable names (l, I, O) are domain-conventional in QEC math.
# These are minor style choices that do not affect correctness.
ignore = ["E702", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
# __init__: late imports (E402) are intentional (runtime optional deps).
"python/qector_decoder_v3/__init__.py" = ["E402"]
# workbench.py: json imported for optional serialization path, Tuple aliased for py3.8 compat.
"python/qector_decoder_v3/workbench.py" = ["F401"]
# qiskit_plugin.py: Tuple re-exported for downstream type annotations.
"python/qector_decoder_v3/qiskit_plugin.py" = ["F401"]
# Test files: many use sys.path manipulation (E402), conditional imports (F401),
# convenience imports kept for symmetry (F401), unused locals in scaffolding (F841),
# f-strings used as comment-like strings for readability (F541).
"python/tests/*.py" = ["E402", "F401", "F541", "F841"]
"python/tests/**/*.py" = ["E402", "F401", "F541", "F841"]
