[build-system]

[tool.ruff]
exclude = ["scripts/*"]
ignore = ["E702", "E402"]

requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "qector-decoder-v3"
version = "0.5.3"
description = "Source-available Rust/Python quantum error correction decoder package for QEC research, PyMatching-compatible validation, belief-matching, BP-OSD/qLDPC workflows, CPU/GPU batch decoding, and reproducible benchmark evidence"
readme = {file = "PYPI_README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "Guillaume Lessard / iD01t Productions", email = "admin@qector.store"}
]
keywords = [
    "quantum error correction",
    "QEC",
    "quantum computing",
    "fault tolerant quantum computing",
    "decoder",
    "quantum decoder",
    "MWPM",
    "minimum weight perfect matching",
    "PyMatching",
    "Stim",
    "Sinter",
    "union find decoder",
    "belief matching",
    "BP OSD",
    "belief propagation",
    "ordered statistics decoding",
    "LDPC",
    "qLDPC",
    "surface code",
    "rotated surface code",
    "syndrome decoding",
    "Rust",
    "Python",
    "PyO3",
    "maturin",
    "research software",
    "benchmark artifacts",
    "reproducibility",
    "QECTOR"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]
# Stim ecosystem: DEM loading, syndrome sampling, Sinter harness, and
# PyMatching / belief-matching / BP-OSD cross-checks.
stim = [
    "stim>=1.12",
    "pymatching>=2.0",
    "sinter>=1.12",
    "ldpc>=2.0",
    "beliefmatching>=0.2",
]
# Reproducible benchmark harness: memory probing, plots and tables.
bench = [
    "psutil>=5.9",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "scipy>=1.10",
]
# GPU acceleration is enabled at build time via Cargo features. These extras exist so
# `pip install qector-decoder-v3[cuda]` / `[opencl]` resolve cleanly. See INSTALL.md.
cuda = []
opencl = []
all = [
    "stim>=1.12",
    "pymatching>=2.0",
    "sinter>=1.12",
    "ldpc>=2.0",
    "beliefmatching>=0.2",
    "psutil>=5.9",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://www.qector.store"
Website = "https://www.qector.store"
Documentation = "https://github.com/GuillaumeLessard/qector-decoder#readme"
Repository = "https://github.com/GuillaumeLessard/qector-decoder"
Source = "https://github.com/GuillaumeLessard/qector-decoder"
Issues = "https://github.com/GuillaumeLessard/qector-decoder/issues"
PyPI = "https://pypi.org/project/qector-decoder-v3/"
DOI = "https://doi.org/10.5281/zenodo.20825980"
"Commercial Licensing" = "https://www.qector.store"
"Benchmark Artifacts" = "https://github.com/GuillaumeLessard/qector-decoder/tree/main/benchmark_results"
"Zenodo Record" = "https://doi.org/10.5281/zenodo.20825980"

[tool.maturin]
python-source = "python"
module-name = "qector_decoder_v3.qector_decoder_v3"
manifest-path = "Cargo.toml"
# Exclude all Rust source from sdist / wheel metadata -- compiled .so/.pyd only.
# The src/ in this repo contains only a stub compile_error! placeholder.
# The real source is injected at CI build time via encrypted Actions secrets.
exclude = [
  "src/**",
  "tests/**",
  "actions-runner/**",
  "artifacts/**",
  "target/**",
  ".venv/**",
]
# Strip debug symbols from compiled extension
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Starlette's TestClient warns that httpx is deprecated in favor of httpx2;
    # this is upstream noise, not actionable from this project.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
