[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[tool.ruff]
exclude = ["scripts/*"]

[tool.ruff.lint]
ignore = ["E702", "E402"]

[project]
name = "qector-decoder-v3"
version = "0.5.7"
description = "Source-available Rust/Python quantum error correction decoder package for QEC research, PyMatching-compatible validation, belief-matching, BP-OSD/qLDPC workflows, CPU/GPU batch decoding, and reproducible benchmark evidence"
readme = {file = "PYPI_README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "Guillaume Lessard / iD01t Productions", email = "admin@qector.store"}
]
keywords = [
    "quantum error correction",
    "QEC",
    "quantum computing",
    "fault tolerant quantum computing",
    "decoder",
    "quantum decoder",
    "MWPM",
    "minimum weight perfect matching",
    "PyMatching",
    "Stim",
    "Sinter",
    "union find decoder",
    "belief matching",
    "BP OSD",
    "belief propagation",
    "ordered statistics decoding",
    "LDPC",
    "qLDPC",
    "surface code",
    "rotated surface code",
    "syndrome decoding",
    "Rust",
    "Python",
    "PyO3",
    "maturin",
    "research software",
    "benchmark artifacts",
    "reproducibility",
    "QECTOR"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]
stim = [
    "stim>=1.12",
    "pymatching>=2.0",
    "sinter>=1.12",
    "ldpc>=2.0",
    "beliefmatching>=0.2",
]
bench = [
    "psutil>=5.9",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "scipy>=1.10",
]
cuda = []
opencl = []
all = [
    "stim>=1.12",
    "pymatching>=2.0",
    "sinter>=1.12",
    "ldpc>=2.0",
    "beliefmatching>=0.2",
    "psutil>=5.9",
    "matplotlib>=3.7",
    "tabulate>=0.9",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://qector.store"
Website = "https://qector.store"
Documentation = "https://qector.store/docs.html"
Repository = "https://github.com/GuillaumeLessard/qector-decoder"
Source = "https://github.com/GuillaumeLessard/qector-decoder"
Issues = "https://github.com/GuillaumeLessard/qector-decoder/issues"
PyPI = "https://pypi.org/project/qector-decoder-v3/"
DOI = "https://doi.org/10.5281/zenodo.20825980"
"Commercial Licensing" = "https://qector.store/commercial.html"
"Official User Manual" = "https://qector.store/manual.html"
"Google Books Manual" = "https://play.google.com/store/books/details?id=dGXuEQAAQBAJ"
"Itch Manual Download" = "https://id01t.itch.io/qector-decoder-v3-the-official-user-manual"
"Benchmark Artifacts" = "https://github.com/GuillaumeLessard/qector-decoder/tree/main/benchmark_results"
"Zenodo Record" = "https://doi.org/10.5281/zenodo.20825980"

[tool.maturin]
python-source = "python"
module-name = "qector_decoder_v3.qector_decoder_v3"
manifest-path = "Cargo.toml"
exclude = [
  "src/**",
  "tests/**",
  "actions-runner/**",
  "artifacts/**",
  "target/**",
  ".venv/**",
]
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
